# UofT-ComputerSystemProgramming

./: .gitignore  README.md
LAB1/: lab1-tutorial.ppt  report.md
LAB2/: CMakeLists.txt  ECE454-Lab2.c  clock.c  clock.h  fcyc.c  fcyc.h  implementation to be resized.c  implementation.c  implementation.h  implementation_reference.c  implementation_reference.h  loadbmp.h  sensor_values copy.csv  sensor_values.csv  sensor_values_non_competitive.csv  test  tilingtest.c  utilities.c  utilities.h
LAB3/assn/: Makefile  README  memlib.h  mm.c
LAB4/: Makefile  report
LAB4/allocators/: Makefile
LAB4/allocators/alloc/: alloc.c
LAB4/allocators/kheap/: kheap.c
LAB4/allocators/libc/: libc_wrapper.c
LAB4/benchmarks/: Makefile.inc  autoTester.py  runall.pl
LAB4/benchmarks/cache-scratch/: Makefile  cache-scratch.c  graphtests.pl  runtests.pl
LAB4/benchmarks/cache-thrash/: Makefile  cache-thrash.c  cache-thrash.ps  graphtests.pl  runtests.pl
LAB4/benchmarks/larson/: Makefile  graphtests.pl  larson.c  runtests.pl
LAB4/benchmarks/threadtest/: Makefile  graphtests.pl  runtests.pl  (+3 more)
LAB4/include/: ftime.h  malloc.h  memlib.h  mm_thread.h  timer.h  tsc.h
LAB4/util/: Makefile  memlib.c  mm_thread.c  tsc.c
LAB5/src/: Makefile  Makefile.include  README.TXT  barrier.c  barrier.h  bitboard.c  gmon.out  gol.c  hashtable.c  hashtable.h  life.c  life.h  life_8threads.c  life_8threadsjj.c  life_hashtable.c  life_multithreading.c  life_multithreadingjjjj.c  lifeseq.c  load.c  load.h  out1  random_bit.c  random_bit.h  save.c  save.h  tags  teamInfo.txt  test  trace  util.h
(+53 files in other folders)
